--- a/HorseRacing.MVC/Views/Shared/_Layout.cshtml
+++ b/HorseRacing.MVC/Views/Shared/_Layout.cshtml
@@ -14,27 +14,27 @@
 
 
         @*<nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow mb-3">
-                <div class="container">
-                    <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index">Home</a>
-                    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target=".navbar-collapse" aria-controls="navbarSupportedContent"
-                            aria-expanded="false" aria-label="Toggle navigation">
-                        <span class="navbar-toggler-icon"></span>
-                    </button>
-                    <div class="navbar-collapse collapse d-sm-inline-flex justify-content-between">
-                        <ul class="navbar-nav flex-grow-1">
-                            <li class="nav-item">
-                                <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index">Home</a>
-                            </li>
-                            <li class="nav-item">
-                                <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
-                            </li>
-                            <li class="nav-item">
-                                <a class="nav-link text-dark" asp-area="" asp-controller="RaceTypes" asp-action="Index">Race Types</a>
-                            </li>
-                        </ul>
-                    </div>
+            <div class="container">
+                <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index">Home</a>
+                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target=".navbar-collapse" aria-controls="navbarSupportedContent"
+                        aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="navbar-collapse collapse d-sm-inline-flex justify-content-between">
+                    <ul class="navbar-nav flex-grow-1">
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index">Home</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="RaceTypes" asp-action="Index">Race Types</a>
+                        </li>
+                    </ul>
                 </div>
-            </nav>*@
+            </div>
+        </nav>*@
 
 
         <nav class="navbar navbar-expand-lg bg-primary">
@@ -48,7 +48,7 @@
                         <a class="nav-link" asp-area="" asp-controller="Home" asp-action="Index">Home</a>
                     </li>
 
-                    <li class="nav-item"> 
+                    <li class="nav-item">
                         <a class="nav-link" asp-area="" asp-controller="RaceDay" asp-action="Index">Race Days</a>
                     </li>
 
@@ -58,33 +58,12 @@
                             <li class="nav-item">
                                 <a class="nav-link" asp-area="" asp-controller="Track" asp-action="Index">Tracks</a>
                             </li>
-                            <li class="nav-item">
-                                <a class="nav-link" asp-area="" asp-controller="RaceTypes" asp-action="Index">Race Types</a>
-                            </li>
-                            <li>
-                                <a class="dropdown-item" href="#"> Second level 2 &raquo </a>
-                                <ul class="submenu dropdown-menu">
-                                    <li><a class="dropdown-item" href=""> Third level 1</a></li>
-                                    <li><a class="dropdown-item" href=""> Third level 2</a></li>
-                                    <li>
-                                        <a class="dropdown-item" href=""> Third level 3 &raquo </a>
-                                        <ul class="submenu dropdown-menu">
-                                            <li><a class="dropdown-item" href=""> Fourth level 1</a></li>
-                                            <li><a class="dropdown-item" href=""> Fourth level 2</a></li>
-                                        </ul>
-                                    </li>
-                                    <li><a class="dropdown-item" href=""> Second level  4</a></li>
-                                    <li><a class="dropdown-item" href=""> Second level  5</a></li>
-                                </ul>
-                            </li>
-                            <li><a class="dropdown-item" href="#"> Dropdown item 3 </a></li>
-                            <li><a class="dropdown-item" href="#"> Dropdown item 4 </a>
                         </ul>
                     </li>
 
                 </ul>
-
-
+            </div>
+        </nav>
     </header>
 
 
