Misc formatting and display changes

--- a/HorseRacing.MVC/Views/RawRaceHorse/Index.cshtml
+++ b/HorseRacing.MVC/Views/RawRaceHorse/Index.cshtml
@@ -4,88 +4,83 @@
     ViewData["Title"] = "Index";
 }
 
-<h1>Index</h1>
-
-<div class="container">
-
-    <div class="row">
-        <div class="col-1">
-            <div>
-
-            </div>
-        </div>
-
-        <div class="col-11">
-
-        </div>
-
+<div class="row">
+    <div class="col-md-2 text-center border border-primary">
+        <h1>
+            Race @Model.FirstOrDefault().RawRace.RaceNumber
+        </h1>
     </div>
-
-    <div class="row">
-
+    <div class="col-md-8 border border-primary">
+        @Model.FirstOrDefault().RawRace.Conditions
     </div>
 
 </div>
 
+<div class="container">
 
-<table class="table">
-    <thead>
-        <tr>
-            <th>
-                @Html.DisplayNameFor(model => model.PostPosition)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.HorseName)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.MorningLineOdds)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.JockeyName)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.WeightCarried)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.TrainerName)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.RawRace)
-            </th>
-            <th></th>
-        </tr>
-    </thead>
-    <tbody>
-        @foreach (var item in Model)
-        {
-            <tr>
-                <td>
+    <div class="row font-weight-bold">
+        <div class="col-md-1">
+            @Html.DisplayNameFor(model => model.PostPosition)
+
+        </div>
+
+        <div class="col-md-3">
+            @Html.DisplayNameFor(model => model.HorseName)
+
+        </div>
+        <div class="col-md-1">
+            @Html.DisplayNameFor(model => model.MorningLineOdds)
+
+        </div>
+        <div class="col-md-2">
+            @Html.DisplayNameFor(model => model.JockeyName)
+
+        </div>
+        <div class="col-md-1">
+            @Html.DisplayNameFor(model => model.WeightCarried)
+
+        </div>
+        <div class="col-md-3">
+            @Html.DisplayNameFor(model => model.TrainerName)
+
+        </div>
+    </div>
+
+    @foreach (var item in Model)
+    {
+        <div class="form-group">
+            <div class="row">
+                <div class="col-md-1">
                     @Html.DisplayFor(modelItem => item.PostPosition)
-                </td>
-                <td>
+
+                </div>
+
+                <div class="col-md-3">
                     @Html.DisplayFor(modelItem => item.HorseName)
-                </td>
-                <td>
+
+                </div>
+                <div class="col-md-1">
                     @Html.DisplayFor(modelItem => item.MorningLineOdds)
-                </td>
-                <td>
+
+                </div>
+                <div class="col-md-2">
                     @Html.DisplayFor(modelItem => item.JockeyName)
-                </td>
-                <td>
+
+                </div>
+                <div class="col-md-1">
                     @Html.DisplayFor(modelItem => item.WeightCarried)
-                </td>
-                <td>
+
+                </div>
+                <div class="col-md-3">
                     @Html.DisplayFor(modelItem => item.TrainerName)
-                </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.RawRace.Id)
-                </td>
-                <td>
-                    <a asp-action="Edit" asp-route-id="@item.Id">Edit</a> |
-                    <a asp-action="Details" asp-route-id="@item.Id">Details</a> |
-                    <a asp-action="Delete" asp-route-id="@item.Id">Delete</a>
-                </td>
-            </tr>
-        }
-    </tbody>
-</table>
+
+                </div>
+            </div>
+        </div>
+
+    }
+
+
+
+
+</div>
