--- a/HorseRacing.MVC/Views/Track/Index.cshtml
+++ b/HorseRacing.MVC/Views/Track/Index.cshtml
@@ -4,29 +4,26 @@
     ViewData["Title"] = "Index";
 }
 
-<h1>Index</h1>
+<h1>Track Maintenance</h1>
 
-<p>
-    <a asp-action="Create">Create New</a>
-</p>
-<table class="table">
-    <thead>
-        <tr>
-            <th>
-                @Html.DisplayNameFor(model => model.Name)
-            </th>
-        </tr>
-    </thead>
-    <tbody>
-@foreach (var item in Model) {
-        <tr>
-            <td>
-                <a class="btn btn-primary" asp-action="Edit" asp-route-id="@item.Id">Edit</a>
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Name)
-            </td>
-        </tr>
-}
-    </tbody>
-</table>
+<div class="panel">
+
+</div>
+
+<div class="container-fluid">
+
+    @foreach (var track in Model)
+    {
+
+        <div class="row form-group">
+            <div class="col-sm-1">
+                <a class="btn btn-primary" asp-action="Edit" asp-route-id="@track.Id">Edit</a>
+            </div>
+
+            <div class="col-sm-3">
+                @Html.DisplayFor(modelItem => track.Name)
+            </div>
+
+        </div>
+    }
+</div>
